Next release
============

- Drop support for Python 2.4 / 2.5.

0.6.3 (2012-03-29)
==================

- This release is the last which will maintain support for Python 2.4 /
  Python 2.5.

- Added support for continuous integration using ``tox`` and ``jenkins``.

- Added 'setup.py dev' alias (runs ``setup.py develop`` plus installs
  ``nose`` and ``coverage``).

- Moved to GitHub.

0.6.2 (2010-10-04)
==================

- Fix iteration bug due to use of '_order' as tuple.

0.6.1 (2010-10-01)
==================

- Fixed persistence bugs in ordering support when adding or removing items.

0.6 (2010-09-30)
================

- Add support for ordering items in a folder.

0.5 (2010/09/04)
================

- Make ``remove`` return the removed object.

- Add ``pop`` method.

0.4 (2009/06/15)
================

- 100% test coverage.

- Add an ``add`` method that does what ``__setitem__`` does.  It also
  provides a flag named ``send_events``, which by default is True.  If
  it is False when ``add` is called, folder events
  (``IObjectWillBeAddedEvent`` and ``IObjectAddedEvent``) will not be
  sent.

- Add a ``remove`` method that does what ``__delitem__`` does.  It
  also provides a flag named ``send_events``, which by default is
  True.  If it is False when ``add` is called, folder events
  (``IObjectWillBeRemovedEvent`` and ``IObjectRemovedEvent``) will not
  be sent.

0.3.5 (2009/1/8)
================

- Add a ``BTrees.Length`` object to folders that don't already have
  one during ``__setitem__`` and ``__delitem__`` (this is an
  "evolution" step; having a Length object is useful for performance
  reasons).

0.3.4 (2009/1/8)
================

- Fix backwards compatibility foul (near
  ``self._num_objects.change(1)``: ``AttributeError: 'NoneType' object
  has no attribute 'change'``).

0.3.3 (2009/1/6)
================

- Add tests for ``unicodify`` and make docs about to-Unicode
  convenience conversion from byte strings (and error messages)
  slightly clearer.
