@@ -1,26 +1,28 @@
 import sys
 
-from zope.interface import implements
-
-from zope.component.event import objectEventNotify
-
-from persistent import Persistent
-
-from repoze.folder.interfaces import IFolder
-from repoze.folder.interfaces import marker
-
-from repoze.folder.events import ObjectAddedEvent
-from repoze.folder.events import ObjectWillBeAddedEvent
-from repoze.folder.events import ObjectRemovedEvent
-from repoze.folder.events import ObjectWillBeRemovedEvent
-
 from BTrees.OOBTree import OOBTree
 from BTrees.Length import Length
+from persistent import Persistent
+from repoze.folder.interfaces import (
+    IFolder,
+    marker
+)
+from repoze.folder.events import (
+    ObjectAddedEvent,
+    ObjectWillBeAddedEvent,
+    ObjectRemovedEvent,
+    ObjectWillBeRemovedEvent
+)
+from zope.interface import implementer
+from zope.component.event import objectEventNotify
 
 sysencoding = sys.getdefaultencoding()
 
+
+@implementer(IFolder)
 class Folder(Persistent):
-    """ A folder implementation which acts much like a Python dictionary.
+    """
+    A folder implementation which acts much like a Python dictionary.
 
     keys are Unicode strings; values are arbitrary Python objects.
     """
@@ -28,25 +30,27 @@ class Folder(Persistent):
     # _num_objects=None below is b/w compat for older instances of
     # folders which don't have a BTrees.Length object as a
     # _num_objects attribute.
-    _num_objects = None 
+    _num_objects = None
 
     __name__ = None
     __parent__ = None
 
     # Default uses ordering of underlying BTree.
     _order = None
+
     def _get_order(self):
         if self._order is not None:
             return list(self._order)
         return self.data.keys()
+
     def _set_order(self, value):
         # XXX:  should we test against self.data.keys()?
         self._order = tuple([unicodify(x) for x in value])
+
     def _del_order(self):
         del self._order
-    order = property(_get_order, _set_order, _del_order)
 
-    implements(IFolder)
+    order = property(_get_order, _set_order, _del_order)
 
     def __init__(self, data=None):
         if data is None:
@@ -55,66 +59,56 @@ class Folder(Persistent):
         self._num_objects = Length(len(data))
 
     def keys(self):
-        """ See IFolder.
-        """
+        """See IFolder."""
         return self.order
 
     def __iter__(self):
         return iter(self.order)
 
     def values(self):
-        """ See IFolder.
-        """
+        """See IFolder."""
         if self._order is not None:
             return [self.data[name] for name in self.order]
         return self.data.values()
 
     def items(self):
-        """ See IFolder.
-        """
+        """See IFolder."""
         if self._order is not None:
             return [(name, self.data[name]) for name in self.order]
         return self.data.items()
 
     def __len__(self):
-        """ See IFolder.
-        """
+        """See IFolder."""
         if self._num_objects is None:
             # can be arbitrarily expensive
             return len(self.data)
         return self._num_objects()
 
     def __nonzero__(self):
-        """ See IFolder.
-        """
+        """See IFolder."""
         return True
 
     def __getitem__(self, name):
-        """ See IFolder.
-        """
+        """See IFolder."""
         name = unicodify(name)
         return self.data[name]
 
     def get(self, name, default=None):
-        """ See IFolder.
-        """
+        """See IFolder."""
         name = unicodify(name)
         return self.data.get(name, default)
 
     def __contains__(self, name):
-        """ See IFolder.
-        """
+        """See IFolder."""
         name = unicodify(name)
-        return self.data.has_key(name)
+        return name in self.data
 
     def __setitem__(self, name, other):
-        """ See IFolder.
-        """
+        """See IFolder."""
         return self.add(name, other)
 
     def add(self, name, other, send_events=True):
-        """ See IFolder.
-        """
+        """See IFolder."""
         if not isinstance(name, basestring):
             raise TypeError("Name must be a string rather than a %s" %
                             name.__class__.__name__)
@@ -123,7 +117,7 @@ class Folder(Persistent):
 
         name = unicodify(name)
 
-        if self.data.has_key(name):
+        if name in self.data:
             raise KeyError('An object named %s already exists' % name)
 
         if send_events:
@@ -146,13 +140,11 @@ class Folder(Persistent):
             objectEventNotify(ObjectAddedEvent(other, self, name))
 
     def __delitem__(self, name):
-        """ See IFolder.
-        """
+        """See IFolder."""
         return self.remove(name)
 
     def remove(self, name, send_events=True):
-        """ See IFolder.
-        """
+        """See IFolder."""
         name = unicodify(name)
         other = self.data[name]
 
@@ -182,8 +174,7 @@ class Folder(Persistent):
         return other
 
     def pop(self, name, default=marker):
-        """ See IFolder.
-        """
+        """See IFolder."""
         try:
             result = self.remove(name)
         except KeyError:
@@ -198,7 +189,8 @@ class Folder(Persistent):
         return '<%s object %r at %#x>' % (classname,
                                           self.__name__,
                                           id(self))
-    
+
+
 def unicodify(name, encoding=None):
     if encoding is None:
         encoding = sysencoding
@@ -209,7 +201,7 @@ def unicodify(name, encoding=None):
             raise TypeError(
                 'Byte string names must be decodeable using the system '
                 'encoding of "utf-8" (%s)' % name
-                )
+            )
         try:
             name = unicode(name, 'utf-8')
         except UnicodeError:
@@ -217,7 +209,6 @@ def unicodify(name, encoding=None):
                 'Byte string names must be decodeable using either the system '
                 'encoding of "%s" or the "utf-8" encoding (%s)' % (
                 sysencoding, name)
-                )
+            )
 
     return name
-
