@@ -27,7 +27,7 @@ requires = [
     'ZODB3',
     'zope.component',
     'zope.interface',
-    ]
+]
 
 tests_require = ['Sphinx', 'repoze.sphinx.autointerface', 'zope.testing']
 
@@ -36,19 +36,21 @@ testing_extras = ['nose', 'coverage']
 setup(name='repoze.folder',
       version=__version__,
       description='A ZODB folder implementation with object events',
-      long_description=README + '\n\n' +  CHANGES,
+      long_description=README + '\n\n' + CHANGES,
       classifiers=[
-        "Development Status :: 3 - Alpha",
-        "Intended Audience :: Developers",
-        "Programming Language :: Python",
-        "Programming Language :: Python :: 2.6",
-        "Programming Language :: Python :: 2.7",
-        "Programming Language :: Python :: Implementation :: CPython",
-        "Topic :: Internet :: WWW/HTTP",
-        "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
-        "Topic :: Internet :: WWW/HTTP :: WSGI",
-        "Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware",
-        ],
+          "Development Status :: 3 - Alpha",
+          "Intended Audience :: Developers",
+          "Programming Language :: Python",
+          "Programming Language :: Python :: 2.6",
+          "Programming Language :: Python :: 2.7",
+          "Programming Language :: Python :: 3.2",
+          "Programming Language :: Python :: 3.3",
+          "Programming Language :: Python :: Implementation :: CPython",
+          "Topic :: Internet :: WWW/HTTP",
+          "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
+          "Topic :: Internet :: WWW/HTTP :: WSGI",
+          "Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware",
+      ],
       keywords='web wsgi zope',
       author="Agendaless Consulting",
       author_email="repoze-dev@lists.repoze.org",
@@ -58,12 +60,12 @@ setup(name='repoze.folder',
       include_package_data=True,
       namespace_packages=['repoze'],
       zip_safe=False,
-      install_requires= requires,
-      tests_require = requires + tests_require,
+      install_requires=requires,
+      tests_require=requires + tests_require,
       test_suite="repoze.folder",
-      entry_points = """\
+      entry_points="""\
       """,
-      extras_require = {
-        'testing':  requires + tests_require + testing_extras,
+      extras_require={
+          'testing':  requires + tests_require + testing_extras,
       }
-)
+      )
