@@ -2,6 +2,7 @@ Next release
 ============
 
 - Drop support for Python 2.4 / 2.5.
+- Added support for Python 3.2 / 3.3
 
 0.6.3 (2012-03-29)
 ==================
